--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>./config_server</module>
 		<module>./identity_service</module>
 		<module>./profile_service</module>
+		<module>./ticket_service</module>
 		<module>./api_gateway</module>
     </modules>
 </project>
