--- a/api_gateway/src/main/resources/bootstrap.properties
+++ b/api_gateway/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=api-gateway
+spring.application.name=api-gateway-docker
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
