Launched the Hello world page

--- a/backend/dotnet/ticketflow/ProfileService/ProfileService.csproj
+++ b/backend/dotnet/ticketflow/ProfileService/ProfileService.csproj
@@ -7,4 +7,10 @@
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
         <AdditionalFiles Include="../stylecop.json" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Api" />
+      <Folder Include="Domain" />
+      <Folder Include="Service" />
+    </ItemGroup>
 </Project>
