--- a/backend/dotnet/ticketflow/ProfileService/appsettings.json
+++ b/backend/dotnet/ticketflow/ProfileService/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "Host": "localhost",
+    "Name": "ticketflow_profile",
+    "User": "ticketflow_profile_user",
+    "Password": "TicketFlow"
+  }
 }
