--- a/backend/dotnet/ticketflow/ProfileService/Properties/launchSettings.json
+++ b/backend/dotnet/ticketflow/ProfileService/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "TicketFlow": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "",
       "applicationUrl": "http://localhost:9002",
       "environmentVariables": {
