Added Consul. Registered Profile service in consul

--- a/backend/dotnet/ticketflow/ProfileService/appsettings.json
+++ b/backend/dotnet/ticketflow/ProfileService/appsettings.json
@@ -12,5 +12,12 @@
     "Name": "ticketflow_profile",
     "User": "ticketflow_profile_user",
     "Password": "TicketFlow"
+  },
+  "Consul": {
+    "Address": "http://localhost:8500",
+    "ServiceName": "ProfileService",
+    "ServiceTags": [
+      "Profile"
+    ]
   }
 }
