--- a/backend/dotnet/ticketflow/ProfileService/ProfileService.csproj
+++ b/backend/dotnet/ticketflow/ProfileService/ProfileService.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Consul" Version="1.6.1.1" />
         <PackageReference Include="Dapper" Version="2.0.35" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
         <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
