Renamed projects. Added common project

--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/TicketFlow.ApiGateway.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/TicketFlow.ApiGateway.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <CodeAnalysisRuleSet>../Custom.ruleset</CodeAnalysisRuleSet>
+        <RootNamespace>ApiGateway</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
