--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <CodeAnalysisRuleSet>../Custom.ruleset</CodeAnalysisRuleSet>
+        <RootNamespace>ProfileService</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
