--- a/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
@@ -1,10 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <RootNamespace>Common</RootNamespace>
+        <RootNamespace>TicketFlow.Common</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Consul" Version="1.6.1.1" />
-    </ItemGroup>
 </Project>
