--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
@@ -2,7 +2,6 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <CodeAnalysisRuleSet>../Custom.ruleset</CodeAnalysisRuleSet>
-        <RootNamespace>TicketFlow.ProfileService</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,6 +10,7 @@
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
         <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+        <PackageReference Include="TicketFlow.Common" Version="1.0.0" />
     </ItemGroup>
     
     <ItemGroup>
