--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
@@ -6,6 +6,9 @@
     <ItemGroup>
         <PackageReference Include="Consul" Version="1.6.1.1" />
         <PackageReference Include="Dapper" Version="2.0.35" />
+        <PackageReference Include="FluentMigrator" Version="3.2.8" />
+        <PackageReference Include="FluentMigrator.Runner" Version="3.2.8" />
+        <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.8" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
         <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
         <PackageReference Include="TicketFlow.Common" Version="1.1.0" />
