Added identity service.

--- a/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Version>1.2.0</Version>
+        <Version>1.2.0-dev</Version>
         <TargetFramework>netstandard2.1</TargetFramework>
         <PackageId>TicketFlow.Common</PackageId>
         <Authors>darkmode1012@gmail.com</Authors>
@@ -13,5 +13,9 @@
         <PackageReference Include="Consul" Version="1.6.1.1" />
         <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
+        <PackageReference Include="Npgsql" Version="4.1.4" />
+        <PackageReference Include="FluentMigrator" Version="3.2.8" />
+        <PackageReference Include="FluentMigrator.Runner" Version="3.2.8" />
+        <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.8" />
     </ItemGroup>
 </Project>
