--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/Properties/launchSettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TicketFlow": {
+    "TicketFlow.ProfileService": {
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "",
