--- a/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Version>1.3.0</Version>
+        <Version>1.4.0-dev</Version>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <PackageId>TicketFlow.Common</PackageId>
         <Authors>darkmode1012@gmail.com</Authors>
@@ -12,7 +12,7 @@
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
-    
+
     <ItemGroup>
         <PackageReference Include="Consul" Version="1.6.1.1" />
         <PackageReference Include="Npgsql" Version="4.1.4" />
