--- a/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
         <PackageReference Include="Consul" Version="1.6.1.1" />
         <PackageReference Include="Npgsql" Version="4.1.4" />
+        <PackageReference Include="Dapper" Version="2.0.35" />
         <PackageReference Include="FluentMigrator" Version="3.2.8" />
         <PackageReference Include="FluentMigrator.Runner" Version="3.2.8" />
         <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.8" />
