--- a/backend/dotnet/ticketflow/TicketFlow.MovieService/TicketFlow.MovieService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.MovieService/TicketFlow.MovieService.csproj
@@ -11,6 +11,6 @@
         <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.8" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
         <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
-        <PackageReference Include="TicketFlow.Common" Version="1.4.0-dev" />
+        <PackageReference Include="TicketFlow.Common" Version="1.4.0" />
     </ItemGroup>
 </Project>
