--- a/backend/dotnet/ticketflow/TicketFlow.TicketService/TicketFlow.TicketService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.TicketService/TicketFlow.TicketService.csproj
@@ -11,6 +11,11 @@
         <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.8" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
         <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
-        <PackageReference Include="TicketFlow.Common" Version="1.4.0" />
+        <PackageReference Include="TicketFlow.Common" Version="1.5.0-dev" />
+        <PackageReference Include="TicketFlow.TicketService.Client" Version="1.0.0-dev" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Domain" />
     </ItemGroup>
 </Project>
