--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService/TicketFlow.IdentityService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService/TicketFlow.IdentityService.csproj
@@ -12,5 +12,6 @@
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
         <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
         <PackageReference Include="TicketFlow.Common" Version="1.5.0-dev" />
+        <PackageReference Include="TicketFlow.IdentityService.Client" Version="1.0.0-dev" />
     </ItemGroup>
 </Project>
