--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
@@ -3,8 +3,30 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "None"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Consul": {
+    "Address": "http://localhost:8500",
+    "ServiceName": "ApiGateway",
+    "ServiceTags": [
+      "ApiGateway"
+    ]
+  },
+  "TicketFlow": {
+    "IdentityService": {
+      "Url": "http://localhost:9001"
+    },
+    "ProfileService": {
+      "Url": "http://localhost:9002"
+    },
+    "TicketService": {
+      "Url": "http://localhost:9003"
+    },
+    "MovieService": {
+      "Url": "http://localhost:9004"
+    }
+  }
 }
