--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client/TicketFlow.IdentityService.Client.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client/TicketFlow.IdentityService.Client.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Version>1.0.0-dev</Version>
+        <Version>1.0.0</Version>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <PackageId>TicketFlow.IdentityService.Client</PackageId>
         <Authors>darkmode1012@gmail.com</Authors>
@@ -13,6 +13,6 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
-        <PackageReference Include="TicketFlow.Common" Version="1.5.0-dev" />
+        <PackageReference Include="TicketFlow.Common" Version="1.5.0" />
     </ItemGroup>
 </Project>
