--- a/backend/dotnet/ticketflow/TicketFlow.MovieService.Client/TicketFlow.MovieService.Client.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.MovieService.Client/TicketFlow.MovieService.Client.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Version>1.0.0-dev</Version>
+        <Version>1.0.0</Version>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <PackageId>TicketFlow.MovieService.Client</PackageId>
         <Authors>darkmode1012@gmail.com</Authors>
@@ -11,6 +11,6 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
-        <PackageReference Include="TicketFlow.Common" Version="1.5.0-dev" />
+        <PackageReference Include="TicketFlow.Common" Version="1.5.0" />
     </ItemGroup>
 </Project>
