--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/TicketFlow.ApiGateway.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/TicketFlow.ApiGateway.csproj
@@ -5,10 +5,10 @@
 
     <ItemGroup>
         <PackageReference Include="Consul" Version="1.6.1.1" />
-        <PackageReference Include="TicketFlow.Common" Version="1.5.0" />
-        <PackageReference Include="TicketFlow.IdentityService.Client" Version="1.0.0" />
-        <PackageReference Include="TicketFlow.ProfileService.Client" Version="1.0.0" />
-        <PackageReference Include="TicketFlow.TicketService.Client" Version="1.0.0" />
-        <PackageReference Include="TicketFlow.MovieService.Client" Version="1.0.0" />
+        <PackageReference Include="TicketFlow.Common" Version="1.6.0-dev" />
+        <PackageReference Include="TicketFlow.IdentityService.Client" Version="1.1.0-dev" />
+        <PackageReference Include="TicketFlow.ProfileService.Client" Version="1.1.0-dev" />
+        <PackageReference Include="TicketFlow.TicketService.Client" Version="1.1.0-dev" />
+        <PackageReference Include="TicketFlow.MovieService.Client" Version="1.1.0-dev" />
     </ItemGroup>
 </Project>
