Added support of url from appsettings.json and run on random port

--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService/appsettings.json
@@ -20,5 +20,10 @@
     "ServiceTags": [
       "Identity"
     ]
+  },
+  "TicketFlow": {
+    "ServiceBaseUrl": "http://localhost",
+    "RunOnRandomPort": "true",
+    "Port": 9001
   }
 }
