--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService/appsettings.json
@@ -23,7 +23,7 @@
   },
   "TicketFlow": {
     "ServiceBaseUrl": "http://localhost",
-    "RunOnRandomPort": true,
+    "RunOnRandomPort": false,
     "Port": 9001
   }
 }
