Added support of UrlFromConfig to all microservices

--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
@@ -16,6 +16,9 @@
     ]
   },
   "TicketFlow": {
+    "ServiceBaseUrl": "http://localhost",
+    "RunOnRandomPort": false,
+    "Port": 8080,
     "IdentityService": {
       "Url": "http://localhost:9001"
     },
