--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/appsettings.json
@@ -20,5 +20,10 @@
     "ServiceTags": [
       "Profile"
     ]
+  },
+  "TicketFlow": {
+    "ServiceBaseUrl": "http://localhost",
+    "RunOnRandomPort": false,
+    "Port": 9002
   }
 }
