--- a/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
@@ -21,4 +21,10 @@
         <PackageReference Include="FluentMigrator.Runner" Version="3.2.8" />
         <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.8" />
     </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>TicketFlow.ProfileService.Test</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
