--- a/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.Common/TicketFlow.Common.csproj
@@ -24,7 +24,7 @@
 
     <ItemGroup>
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-            <_Parameter1>TicketFlow.ProfileService.Test</_Parameter1>
+            <_Parameter1>TicketFlow.Common.Test</_Parameter1>
         </AssemblyAttribute>
     </ItemGroup>
 </Project>
