--- a/backend/dotnet/ticketflow/TicketFlow.TicketService/TicketFlow.TicketService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.TicketService/TicketFlow.TicketService.csproj
@@ -14,4 +14,10 @@
         <PackageReference Include="TicketFlow.Common" Version="1.6.0-dev" />
         <PackageReference Include="TicketFlow.TicketService.Client" Version="1.1.0-dev" />
     </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>TicketFlow.TicketService.Test</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
