--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway.Test/TicketFlow.ApiGateway.Test.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway.Test/TicketFlow.ApiGateway.Test.csproj
@@ -14,6 +14,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TicketFlow.ProfileService\TicketFlow.ProfileService.csproj" />
+        <ProjectReference Include="..\TicketFlow.ApiGateway\TicketFlow.ApiGateway.csproj" />
     </ItemGroup>
 </Project>
