--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client/TicketFlow.IdentityService.Client.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client/TicketFlow.IdentityService.Client.csproj
@@ -15,4 +15,10 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
         <PackageReference Include="TicketFlow.Common" Version="1.6.0-dev" />
     </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>TicketFlow.IdentityService.Client.Test</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
