--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService.Test/TicketFlow.IdentityService.Test.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService.Test/TicketFlow.IdentityService.Test.csproj
@@ -14,6 +14,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TicketFlow.ProfileService\TicketFlow.ProfileService.csproj" />
+        <ProjectReference Include="..\TicketFlow.IdentityService\TicketFlow.IdentityService.csproj" />
     </ItemGroup>
 </Project>
