--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService/TicketFlow.IdentityService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService/TicketFlow.IdentityService.csproj
@@ -21,4 +21,10 @@
         <EmbeddedResource Remove="publish\**" />
         <Content Remove="publish\**" />
     </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>TicketFlow.IdentityService.Test</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
