--- a/backend/dotnet/ticketflow/TicketFlow.MovieService.Client.Test/TicketFlow.MovieService.Client.Test.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.MovieService.Client.Test/TicketFlow.MovieService.Client.Test.csproj
@@ -3,7 +3,7 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
-
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
         <PackageReference Include="xunit" Version="2.4.0" />
@@ -14,6 +14,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TicketFlow.ProfileService\TicketFlow.ProfileService.csproj" />
+        <ProjectReference Include="..\TicketFlow.MovieService.Client\TicketFlow.MovieService.Client.csproj" />
     </ItemGroup>
 </Project>
