--- a/backend/dotnet/ticketflow/TicketFlow.MovieService.Test/TicketFlow.MovieService.Test.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.MovieService.Test/TicketFlow.MovieService.Test.csproj
@@ -14,6 +14,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TicketFlow.ProfileService\TicketFlow.ProfileService.csproj" />
+        <ProjectReference Include="..\TicketFlow.MovieService\TicketFlow.MovieService.csproj" />
     </ItemGroup>
 </Project>
