--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService.Client/TicketFlow.ProfileService.Client.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService.Client/TicketFlow.ProfileService.Client.csproj
@@ -16,7 +16,7 @@
 
     <ItemGroup>
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-            <_Parameter1>TicketFlow.ProfileService.Test</_Parameter1>
+            <_Parameter1>TicketFlow.ProfileService.Client.Test</_Parameter1>
         </AssemblyAttribute>
     </ItemGroup>
 </Project>
