--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
@@ -11,8 +11,8 @@
         <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.8" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
         <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
-        <PackageReference Include="TicketFlow.Common" Version="1.6.0-dev" />
-        <PackageReference Include="TicketFlow.ProfileService.Client" Version="1.1.0-dev" />
+        <PackageReference Include="TicketFlow.Common" Version="1.6.0" />
+        <PackageReference Include="TicketFlow.ProfileService.Client" Version="1.1.0" />
     </ItemGroup>
 
     <ItemGroup>
