--- a/backend/dotnet/ticketflow/TicketFlow.TicketService.Client/TicketFlow.TicketService.Client.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.TicketService.Client/TicketFlow.TicketService.Client.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Version>1.1.0-dev</Version>
+        <Version>1.1.0</Version>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <PackageId>TicketFlow.TicketService.Client</PackageId>
         <Authors>darkmode1012@gmail.com</Authors>
@@ -11,7 +11,7 @@
     
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
-        <PackageReference Include="TicketFlow.Common" Version="1.6.0-dev" />
+        <PackageReference Include="TicketFlow.Common" Version="1.6.0" />
     </ItemGroup>
 
     <ItemGroup>
