Added DynamicGenProxy2 reference in IdentityService.Client and IdentityService.Client.Test. Changed AuthorizedUser. Added AuthorizerUserTest. Increased version of IdentityService.Test

--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client.Test/TicketFlow.IdentityService.Client.Test.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client.Test/TicketFlow.IdentityService.Client.Test.csproj
@@ -16,4 +16,10 @@
     <ItemGroup>
         <ProjectReference Include="..\TicketFlow.IdentityService.Client\TicketFlow.IdentityService.Client.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
