To lab review, classes are deleted

--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client.Test/TicketFlow.IdentityService.Client.Test.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client.Test/TicketFlow.IdentityService.Client.Test.csproj
@@ -22,4 +22,9 @@
             <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
         </AssemblyAttribute>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Entities" />
+      <Folder Include="Proxies\UserApiProxyTests" />
+    </ItemGroup>
 </Project>
