--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client/TicketFlow.IdentityService.Client.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService.Client/TicketFlow.IdentityService.Client.csproj
@@ -24,4 +24,8 @@
             <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
         </AssemblyAttribute>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Proxies" />
+    </ItemGroup>
 </Project>
