--- a/backend/dotnet/ticketflow/TicketFlow.Common.Test/TicketFlow.Common.Test.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.Common.Test/TicketFlow.Common.Test.csproj
@@ -16,4 +16,10 @@
     <ItemGroup>
       <ProjectReference Include="..\TicketFlow.Common\TicketFlow.Common.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
