--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
@@ -19,8 +19,10 @@
     "ServiceBaseUrl": "http://localhost",
     "RunOnRandomPort": false,
     "Port": 8080,
+    "ServiceUrlProvidingType": "FromConsul",
     "IdentityService": {
-      "Url": "http://localhost:9001"
+      "Url": "http://localhost:9001",
+      "ConsulName": "IdentityService"
     },
     "ProfileService": {
       "Url": "http://localhost:9002"
