Used serviceUrlProvider in MovieService.Client

--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
@@ -25,13 +25,16 @@
       "ConsulName": "IdentityService"
     },
     "ProfileService": {
-      "Url": "http://localhost:9002"
+      "Url": "http://localhost:9002",
+      "ConsulName": "ProfileService"
     },
     "TicketService": {
-      "Url": "http://localhost:9003"
+      "Url": "http://localhost:9003",
+      "ConsulName": "TicketService"
     },
     "MovieService": {
-      "Url": "http://localhost:9004"
+      "Url": "http://localhost:9004",
+      "ConsulName": "MovieService"
     }
   }
 }
