Fixed ApiGateway`s empty responses in docker

--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.Docker.json
@@ -16,7 +16,7 @@
     ]
   },
   "TicketFlow": {
-    "ServiceBaseUrl": "http://localhost",
+    "ServiceBaseUrl": "http://api-gateway",
     "RunOnRandomPort": false,
     "Port": 8080,
     "ServiceUrlProvidingType": "FromConsul",
