--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService/appsettings.json
@@ -17,13 +17,9 @@
   "Consul": {
     "Address": "http://localhost:8500",
     "ServiceName": "IdentityService",
+    "ServiceUrl": "http://localhost:9001",
     "ServiceTags": [
       "Identity"
     ]
-  },
-  "TicketFlow": {
-    "ServiceBaseUrl": "http://localhost",
-    "RunOnRandomPort": false,
-    "Port": 9001
   }
 }
