--- a/backend/dotnet/ticketflow/TicketFlow.MovieService/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.MovieService/appsettings.Docker.json
@@ -17,13 +17,9 @@
   "Consul": {
     "Address": "http://consul:8500",
     "ServiceName": "MovieService",
+    "ServiceUrl": "http://movie-service:9004",
     "ServiceTags": [
       "Movie"
     ]
-  },
-  "TicketFlow": {
-    "ServiceBaseUrl": "http://movie-service",
-    "RunOnRandomPort": false,
-    "Port": 9004
   }
 }
