--- a/backend/dotnet/ticketflow/TicketFlow.TicketService/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.TicketService/appsettings.Docker.json
@@ -17,13 +17,9 @@
   "Consul": {
     "Address": "http://consul:8500",
     "ServiceName": "TicketService",
+    "ServiceUrl": "http://ticket-service:9003",
     "ServiceTags": [
       "Ticket"
     ]
-  },
-  "TicketFlow": {
-    "ServiceBaseUrl": "http://ticket-service",
-    "RunOnRandomPort": false,
-    "Port": 9003
   }
 }
