--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/appsettings.json
@@ -17,13 +17,9 @@
   "Consul": {
     "Address": "http://localhost:8500",
     "ServiceName": "ProfileService",
+    "ServiceUrl": "http://localhost:9002",
     "ServiceTags": [
       "Profile"
     ]
-  },
-  "TicketFlow": {
-    "ServiceBaseUrl": "http://localhost",
-    "RunOnRandomPort": false,
-    "Port": 9002
   }
 }
