Fixed startup in api gateway

--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.Docker.json
@@ -11,14 +11,12 @@
   "Consul": {
     "Address": "http://consul:8500",
     "ServiceName": "ApiGateway",
+    "ServiceUrl": "http://api-gateway:8080",
     "ServiceTags": [
       "ApiGateway"
     ]
   },
   "TicketFlow": {
-    "ServiceBaseUrl": "http://api-gateway",
-    "RunOnRandomPort": false,
-    "Port": 8080,
     "ServiceUrlProvidingType": "FromConsul",
     "IdentityService": {
       "Url": "http://identity-service:9001",
