--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/TicketFlow.ApiGateway.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/TicketFlow.ApiGateway.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="TicketFlow.ProfileService.Client" Version="1.2.1" />
         <PackageReference Include="TicketFlow.TicketService.Client" Version="1.2.0" />
         <PackageReference Include="TicketFlow.MovieService.Client" Version="1.2.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
