Added an ability to disable seeders in ApiGateway

--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.Docker.json
@@ -18,6 +18,7 @@
   },
   "TicketFlow": {
     "ServiceUrlProvidingType": "FromConsul",
+    "RunSeeders": true,
     "IdentityService": {
       "Url": "http://identity-service:9001",
       "ConsulName": "IdentityService"
