--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
@@ -18,6 +18,7 @@
   },
   "TicketFlow": {
     "ServiceUrlProvidingType": "FromConsul",
+    "RunSeeders": false,
     "IdentityService": {
       "Url": "http://localhost:9001",
       "ConsulName": "IdentityService"
