Added an ability to disable registering in consul during the startup. Now application can be started up without working consul

--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.Docker.json
@@ -9,6 +9,7 @@
   },
   "AllowedHosts": "*",
   "Consul": {
+    "RegisterInConsul": true,
     "Address": "http://consul:8500",
     "ServiceName": "ApiGateway",
     "ServiceUrl": "http://api-gateway:8080",
