--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
@@ -9,6 +9,7 @@
   },
   "AllowedHosts": "*",
   "Consul": {
+    "RegisterInConsul": false,
     "Address": "http://localhost:8500",
     "ServiceName": "ApiGateway",
     "ServiceUrl": "http://localhost:8080",
