Used new version of Common service. Added RegisterInConsul settings in services

--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService/appsettings.Docker.json
@@ -15,6 +15,7 @@
     "Password": "TicketFlow"
   },
   "Consul": {
+    "RegisterInConsul": true,
     "Address": "http://consul:8500",
     "ServiceName": "IdentityService",
     "ServiceUrl": "http://identity-service:9001",
