--- a/backend/dotnet/ticketflow/TicketFlow.MovieService/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.MovieService/appsettings.json
@@ -15,6 +15,7 @@
     "Password": "TicketFlow"
   },
   "Consul": {
+    "RegisterInConsul": true,
     "Address": "http://localhost:8500",
     "ServiceName": "MovieService",
     "ServiceUrl": "http://localhost:9004",
