--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/appsettings.Docker.json
@@ -15,6 +15,7 @@
     "Password": "TicketFlow"
   },
   "Consul": {
+    "RegisterInConsul": true,
     "Address": "http://consul:8500",
     "ServiceName": "ProfileService",
     "ServiceUrl": "http://movie-service:9002",
