Hided info logs from seeders

--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/appsettings.json
@@ -3,13 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
+      "System.Net.Http": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "None"
     }
   },
   "AllowedHosts": "*",
   "Consul": {
-    "RegisterInConsul": false,
+    "RegisterInConsul": true,
     "Address": "http://localhost:8500",
     "ServiceName": "ApiGateway",
     "ServiceUrl": "http://localhost:8080",
@@ -19,7 +20,7 @@
   },
   "TicketFlow": {
     "ServiceUrlProvidingType": "FromConsul",
-    "RunSeeders": false,
+    "RunSeeders": true,
     "IdentityService": {
       "Url": "http://localhost:9001",
       "ConsulName": "IdentityService"
