--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/TicketFlow.ApiGateway.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/TicketFlow.ApiGateway.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="TicketFlow.TicketService.Client" Version="1.2.0" />
         <PackageReference Include="TicketFlow.MovieService.Client" Version="1.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
