Fixed ProfileService url for docker in appsettings.json

--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/appsettings.Docker.json
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/appsettings.Docker.json
@@ -18,7 +18,7 @@
     "RegisterInConsul": true,
     "Address": "http://consul:8500",
     "ServiceName": "ProfileService",
-    "ServiceUrl": "http://movie-service:9002",
+    "ServiceUrl": "http://profile-service:9002",
     "ServiceTags": [
       "Profile"
     ]
