Moved images to separate repositories on dockerhub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
     db:
-        image: darkmode1012/ticketflow:db-1
+        image: darkmode1012/ticketflow_db:1.0.0
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_DB=postgres
@@ -20,7 +20,7 @@ services:
             - "8500:8500"
 
     identity-service:
-        image: darkmode1012/ticketflow:identity-service-1
+        image: darkmode1012/ticketflow_identity-service:1.0.0
         networks:
             - ticketflow-network
         depends_on:
@@ -32,7 +32,7 @@ services:
         restart: unless-stopped
 
     profile-service:
-        image: darkmode1012/ticketflow:profile-service-2
+        image: darkmode1012/ticketflow_profile-service:1.0.0
         networks:
             - ticketflow-network
         depends_on:
@@ -44,7 +44,7 @@ services:
         restart: unless-stopped
 
     ticket-service:
-        image: darkmode1012/ticketflow:ticket-service-1
+        image: darkmode1012/ticketflow_ticket-service:1.0.0
         networks:
             - ticketflow-network
         depends_on:
@@ -56,7 +56,7 @@ services:
         restart: unless-stopped
 
     movie-service:
-        image: darkmode1012/ticketflow:movie-service-1
+        image: darkmode1012/ticketflow_movie-service:1.0.0
         networks:
             - ticketflow-network
         depends_on:
@@ -68,7 +68,7 @@ services:
         restart: unless-stopped            
 
     api-gateway:
-        image: darkmode1012/ticketflow:api-gateway-2
+        image: darkmode1012/ticketflow_api-gateway:1.0.0
         networks:
             - ticketflow-network
         depends_on:
@@ -85,7 +85,7 @@ services:
             - "8080:8080"
                     
     web-client:
-        image: darkmode1012/ticketflow:web-client-1
+        image: darkmode1012/ticketflow_web-client:1.0.0
         networks:
             - ticketflow-network
         depends_on:
